[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/UI/Buttons/yellow_button01.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Buttons/yellow_button04.png" type="Texture" id=4]
[ext_resource path="res://Resourses/Fonts/kfn_25.tres" type="DynamicFont" id=5]
[ext_resource path="res://Resourses/Fonts/kfn_30.tres" type="DynamicFont" id=6]
[ext_resource path="res://Resourses/Fonts/kfn_40.tres" type="DynamicFont" id=7]
[ext_resource path="res://Resourses/Fonts/kp_45.tres" type="DynamicFont" id=8]
[ext_resource path="res://Assets/Audio/MusicBox.mp3" type="AudioStream" id=9]
[ext_resource path="res://Scenes/UIScenes/Credits.gd" type="Script" id=10]
[ext_resource path="res://Assets/Icons/home.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 22
outline_color = Color( 0.513726, 0.509804, 0.537255, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 1
outline_color = Color( 0.00392157, 0.145098, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 25
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Credits" type="Node2D"]
script = ExtResource( 10 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsL" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -615.0
margin_top = 10.0
margin_right = -349.0
margin_bottom = 86.0
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = SubResource( 1 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits1" type="Label" parent="ColorRect"]
margin_left = 280.0
margin_top = 29.0
margin_right = 1280.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 4 )
text = "All assets used are free and under the Creative Commons 1.0  license"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits2" type="Label" parent="ColorRect"]
margin_left = 295.0
margin_top = 55.0
margin_right = 1265.0
margin_bottom = 85.0
custom_colors/font_color = Color( 0, 1, 0.0431373, 1 )
custom_fonts/font = SubResource( 2 )
text = "Shout-out  to every creator of these amazing open source assets!"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="TextureButton" parent="ColorRect"]
margin_left = 250.0
margin_top = 100.0
margin_right = 440.0
margin_bottom = 145.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "Audio"
align = 1
valign = 1

[node name="Art" type="TextureButton" parent="ColorRect"]
margin_left = 475.0
margin_top = 100.0
margin_right = 665.0
margin_bottom = 145.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/Art"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "Art"
align = 1
valign = 1

[node name="ScriptCode" type="TextureButton" parent="ColorRect"]
margin_left = 700.0
margin_top = 100.0
margin_right = 950.0
margin_bottom = 145.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/ScriptCode"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "Story / Code"
align = 1
valign = 1

[node name="Back" type="TextureButton" parent="ColorRect"]
margin_left = 1000.0
margin_top = 100.0
margin_right = 1050.0
margin_bottom = 150.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/Back"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 11 )

[node name="AudioInfo" type="TextureRect" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -550.0
margin_right = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioL2" type="Label" parent="ColorRect/AudioInfo"]
margin_top = 168.0
margin_right = 1280.0
margin_bottom = 203.0
custom_fonts/font = ExtResource( 5 )
text = "Sad Song Loop"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioL4" type="Label" parent="ColorRect/AudioInfo"]
margin_top = 350.0
margin_right = 1280.0
margin_bottom = 283.0
custom_fonts/font = ExtResource( 5 )
text = "ChildhoodMusicBoxHalf.mp3"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioL5" type="Label" parent="ColorRect/AudioInfo"]
margin_top = 248.0
margin_right = 1280.0
margin_bottom = 283.0
custom_fonts/font = ExtResource( 5 )
text = "Millama-Chan on BeepBox"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Site" type="Label" parent="ColorRect/AudioInfo"]
margin_right = 1280.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.929412, 0.929412, 0.929412, 1 )
custom_fonts/font = SubResource( 3 )
text = "All creators and their audios can be found at freesound.org"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="extra" type="Label" parent="ColorRect/AudioInfo"]
margin_top = 50.0
margin_right = 1280.0
margin_bottom = 95.0
custom_colors/font_color = Color( 0.0941176, 1, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Musics and sound effects::"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Names2" type="Label" parent="ColorRect/AudioInfo"]
margin_top = 138.0
margin_right = 1280.0
margin_bottom = 167.0
custom_colors/font_color = Color( 1, 0.72549, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "SuperGamerSVK"
align = 1
valign = 1

[node name="Names3" type="Label" parent="ColorRect/AudioInfo"]
margin_top = 223.0
margin_right = 1280.0
margin_bottom = 252.0
custom_colors/font_color = Color( 1, 0.72549, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Shuinvy"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Names4" type="Label" parent="ColorRect/AudioInfo"]
margin_top = 308.0
margin_right = 1280.0
margin_bottom = 337.0
custom_colors/font_color = Color( 1, 0.72549, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Other sounds:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArtInfo" type="TextureRect" parent="ColorRect"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -550.0
margin_right = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioL" type="Label" parent="ColorRect/ArtInfo"]
margin_left = 100.0
margin_top = 75.0
margin_right = 700.0
margin_bottom = 264.0
custom_fonts/font = ExtResource( 5 )
text = "Monster Builder Pack
UI Pack
Game Icons
Tower Defense (top-down)
Top-down Tanks Redux
Kenney Fonts"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioL2" type="Label" parent="ColorRect/ArtInfo"]
margin_left = 100.0
margin_top = 300.0
margin_right = 700.0
margin_bottom = 361.0
custom_fonts/font = ExtResource( 5 )
text = "Free graveyard platformer tileset
Free sci-fi platformer tileset"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioL4" type="Label" parent="ColorRect/ArtInfo"]
margin_left = 100.0
margin_top = 400.0
margin_right = 882.0
margin_bottom = 435.0
custom_fonts/font = ExtResource( 5 )
text = "FREE Keyboard and controllers prompts pack"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioL5" type="Label" parent="ColorRect/ArtInfo"]
margin_left = 100.0
margin_top = 475.0
margin_right = 700.0
margin_bottom = 510.0
custom_fonts/font = ExtResource( 5 )
text = "Character arts (Hazel and friends)
Edits and other sprites"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="extra" type="Label" parent="ColorRect/ArtInfo"]
margin_right = 1280.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0.0666667, 0.721569, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "sprites, titleset and other arts by:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Names" type="Label" parent="ColorRect/ArtInfo"]
margin_left = 75.0
margin_top = 50.0
margin_right = 453.0
margin_bottom = 79.0
custom_colors/font_color = Color( 1, 0.72549, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Kenney at : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Names2" type="Label" parent="ColorRect/ArtInfo"]
margin_left = 75.0
margin_top = 270.0
margin_right = 732.0
margin_bottom = 299.0
custom_colors/font_color = Color( 1, 0.72549, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Zuhria Alfitra at :"

[node name="Names3" type="Label" parent="ColorRect/ArtInfo"]
margin_left = 75.0
margin_top = 375.0
margin_right = 564.0
margin_bottom = 404.0
custom_colors/font_color = Color( 1, 0.72549, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "xelu at:"

[node name="Names7" type="Label" parent="ColorRect/ArtInfo"]
margin_left = 75.0
margin_top = 450.0
margin_right = 351.0
margin_bottom = 479.0
custom_colors/font_color = Color( 1, 0.72549, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Millama-Chan"

[node name="Names4" type="Label" parent="ColorRect/ArtInfo"]
margin_left = 200.0
margin_top = 375.0
margin_right = 575.0
margin_bottom = 404.0
custom_colors/font_color = Color( 0.352941, 1, 0.282353, 1 )
custom_fonts/font = ExtResource( 5 )
text = "https://opengameart.org/"

[node name="Names5" type="Label" parent="ColorRect/ArtInfo"]
margin_left = 250.0
margin_top = 50.0
margin_right = 526.0
margin_bottom = 79.0
custom_colors/font_color = Color( 0.352941, 1, 0.282353, 1 )
custom_fonts/font = ExtResource( 5 )
text = "www.kenney.nl"

[node name="Names6" type="Label" parent="ColorRect/ArtInfo"]
margin_left = 350.0
margin_top = 270.0
margin_right = 754.0
margin_bottom = 299.0
custom_colors/font_color = Color( 0.352941, 1, 0.282353, 1 )
custom_fonts/font = ExtResource( 5 )
text = "https://www.gameart2d.com/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Story_Code" type="TextureRect" parent="ColorRect"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -550.0
margin_right = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="extra" type="Label" parent="ColorRect/Story_Code"]
margin_top = 11.0
margin_right = 1280.0
margin_bottom = 56.0
custom_colors/font_color = Color( 0.0666667, 0.721569, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = " story and code:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="extra2" type="Label" parent="ColorRect/Story_Code"]
margin_top = 136.0
margin_right = 1280.0
margin_bottom = 181.0
custom_colors/font_color = Color( 0.0666667, 0.721569, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Game theme:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="extra3" type="Label" parent="ColorRect/Story_Code"]
margin_top = 311.0
margin_right = 1280.0
margin_bottom = 356.0
custom_colors/font_color = Color( 0.0666667, 0.721569, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Special thanks"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Names" type="Label" parent="ColorRect/Story_Code"]
margin_top = 61.0
margin_right = 1280.0
margin_bottom = 106.0
custom_colors/font_color = Color( 1, 0.72549, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Millama-Chan"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Names2" type="Label" parent="ColorRect/Story_Code"]
margin_top = 176.0
margin_right = 1280.0
margin_bottom = 211.0
custom_colors/font_color = Color( 1, 0.72549, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "DEATH IS ONLY THE BEGINNING"
align = 1

[node name="AudioL4" type="Label" parent="ColorRect/Story_Code"]
margin_top = 211.0
margin_right = 1280.0
margin_bottom = 256.0
custom_fonts/font = ExtResource( 7 )
text = "GameDev.tv 2022 Game Jam"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Names3" type="Label" parent="ColorRect/Story_Code"]
margin_left = 50.0
margin_top = 351.0
margin_right = 1250.0
margin_bottom = 540.0
custom_colors/font_color = Color( 0.909804, 0.909804, 0.909804, 1 )
custom_fonts/font = ExtResource( 8 )
text = "   - To my parents for playtesting my game and supporting me during my first Game Jam 
 -  To GameDev.TV for this amazing event. Thanks to you, for the past days I learned more than I could ever imagine while having fun as well."
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicBox" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -18.0

[connection signal="pressed" from="ColorRect/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="ColorRect/Art" to="." method="_on_Art_pressed"]
[connection signal="pressed" from="ColorRect/ScriptCode" to="." method="_on_ScriptCode_pressed"]
[connection signal="pressed" from="ColorRect/Back" to="." method="_on_Back_pressed"]
